name:                  exwhile-analysis
version:               0.1
synopsis:              Parsing and analysis for an extended while language.
description:           Solution for assignment 1 for Automatic Program Analysis at Utrecht University.
category:              Unclassified
copyright:             (c) 2015 Rob Spoel, Mathijs Baaijens
author:                Rob Spoel <robspoel@gmail.com>, Mathijs Baaijens <mathijs.baaijens@gmail.com>
maintainer:            Rob Spoel <robspoel@gmail.com>, Mathijs Baaijens <mathijs.baaijens@gmail.com>
stability:             provisional
homepage:              http://foswiki.cs.uu.nl/foswiki/bin/view/Apa/DataflowAndAbstractInterpretation
tested-with:           GHC == 7.8.3
build-type:            Simple
cabal-version:         >= 1.8
extra-source-files:    AUTHORS, Makefile

executable parse-exwhile
  main-is:             ParseExWhile.hs
  build-depends:       base >= 4 && < 5, uu-cco >= 0.1.0.1, uhc-light >= 1.1.8.3, uhc-util >= 0.1.3.9
  other-modules:       CCO.ExWhile, CCO.ExWhile.AG, CCO.ExWhile.Base, CCO.ExWhile.Lexer, CCO.ExWhile.Parser
  hs-source-dirs:      src
